[package]
name = "disruptor-rs"
description = "A high-performance ring buffer implementation of the LMAX Disruptor pattern"
authors = ["Khaled Yassin <khaled.yassin.95@hotmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/khaledyassin/disruptor-rs"
documentation = "https://docs.rs/disruptor-rs"
readme = "README.md"
keywords = ["disruptor", "ring-buffer", "concurrent", "lock-free", "high-performance"]
categories = ["concurrency", "data-structures"]
version = "0.1.0"
edition = "2021"

[dependencies]
criterion = "0.5"
crossbeam-channel = "0.5.13"

[dev-dependencies]
criterion = "0.5"
cargo-llvm-cov = "0.5"

[[bench]]
name = "throughput"
harness = false
