[package]
name = "disruptor-rs"
description = "A high-performance ring buffer implementation of the LMAX Disruptor pattern"
authors = ["Khaled Yassin <khaled.yassin.95@hotmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/khaledyassin/disruptor-rs"
documentation = "https://docs.rs/disruptor-rs"
readme = "README.md"
keywords = ["disruptor", "ring-buffer", "concurrent", "lock-free", "high-performance"]
categories = ["concurrency", "data-structures"]
version = "0.1.1"
edition = "2021"

[dependencies]
criterion = "0.5"
crossbeam-channel = "0.5.13"
rand = "0.8.5"
url = "2.5.4"


[dev-dependencies]
criterion = "0.5"
cargo-llvm-cov = "0.5"
serde = "1.0.215"
serde_json = "1.0.133"
tungstenite = { version = "0.19.0", features = ["native-tls"] }
ctrlc = "3.4.5"

[[bench]]
name = "throughput"
harness = false
